# Job-filters-backend

./: .env.example  .gitignore  Dockerfile  PROGRESS.md  README.md  fly.toml  pyproject.toml
.conductor/: settings.toml
app/: auth.py  config.py  deps.py  main.py
app/db/: client.py
app/db/migrations/: 0001_init.sql  0002_atomic_quota.sql  (+13 more)
app/llm/: anthropic.py  base.py  openai.py  prompts.py  registry.py
app/routers/: admin.py  applications.py  billing.py  contacts.py  cover_letter.py  cv.py  diagnostics.py  evaluate.py  filter_validation.py  filters.py  interviews.py  me.py  profiles.py
app/schemas/: admin.py  application.py  billing.py  contact.py  cover_letter.py  cv.py  diagnostics.py  evaluate.py  filter.py  fit.py  interview.py  profile.py  user.py
app/services/: admin.py  applications.py  billing.py  cache.py  contacts.py  cover_letter.py  cv.py  cv_extract.py  diagnostics.py  evaluator.py  fit_cache.py  fit_evaluator.py  interviews.py  llm_calls.py  quota.py  rate_limit.py
bruno/: README.md  bruno.json
bruno/Evaluate/: Evaluate Job.bru
bruno/Filters/: Create Filter.bru  Delete Filter.bru  List Filters.bru  Update Filter.bru
bruno/Me/: Get Me.bru
bruno/environments/: Local.bru
tests/: conftest.py  test_admin.py  test_applications.py  test_billing.py  test_contacts.py  test_cover_letter.py  test_cv.py  test_diagnostics.py  test_evaluate.py  test_filter_validation.py  test_fit.py  test_interviews.py  test_main.py  test_profiles.py  test_prompts.py  test_quota.py  test_rate_limit.py
tests/fakes/: fake_db.py  fake_provider.py
